--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </section>
 
         <hr>
+<a class="twitter-timeline" data-lang="en" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/crippledrat">Tweets by crippledrat</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+<a href="https://twitter.com/crippledrat" class="twitter-follow-button" data-show-count="false">Follow @crippledrat</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         <section id="main_content">
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
